# flight-deals-tracker

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: config.example.json  destinations.json  fx_rates.json  ground_matrix.json  ground_transfers.json  price_alerts.csv  price_history.csv  wizz_version.txt
deploy/: agentic-wake.sh
docs/: CONTRACT.md  DESIGN.md  FLIGHT-DEALS-CREATIVE-USAGE-SKILL.md  OPERATIONS.md  PLAN.md  RESEARCH-HISTORY.md  RESEARCH.md  SEARCH-DESIGN.md  UPGRADE-PLAN.md  explainer.html
evals/: README.md
patches/: apply_farepy_fix.sh  farepy_integration.patch  roundtrip_logic.patch
scripts/: capture_fixtures.py  collect_deals.py  cron_report.py  daily_track.py  refresh_fx.py  refresh_ground.py  test_roundtrip.py
src/flight_deals/: cli.py  (+13 more)
tests/: conftest.py  test_alert_state.py  test_apify.py  test_brief.py  test_cache_v2.py  test_capture_fixtures.py  test_cli.py  test_cli_spec.py  test_concurrency.py  test_config_cache.py  test_confirm.py  test_contract.py  test_edge_cases.py  test_fx.py  test_gems_data.py  test_gems_engine.py  test_ground.py  test_ground_ferry.py  test_ground_hybrid.py  test_ground_matrix.py  test_ground_transit.py  test_history.py  test_history_v2.py  test_http.py  test_intents.py  test_models_groundleg.py  test_notifier.py  test_orchestrator.py  test_output.py  test_planner.py  test_planner_golden.py  test_providers.py  test_roundtrip.py  test_ryanair_provider.py  test_search.py  test_searches.py  test_shapes.py  test_skill_router_pins_cli.py  test_snapshots.py  test_spec.py  (+5 more)
(+269 files in other folders)
