[project]
name = "flight-deals"
version = "0.7.0"
description = "Track Ryanair and Wizz Air flight deals by category"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dateutil>=2.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "freezegun>=1.2",
    "responses>=0.24",
]

[project.scripts]
flight-deals = "flight_deals.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]